<resources>
    <string name="app_name">Old School Companion</string>
    <string name="settings">Settings</string>
    <string name="menu_show_info">Info</string>
    <string name="general_settings">General</string>
    <string name="grandexchange">Grand Exchange</string>
    <string name="tracker">Tracker</string>
    <string name="hiscores">Hiscores</string>
    <string name="search_item">Search for an item…</string>
    <string name="price">Price</string>
    <string name="todays_change">Today\'s change</string>
    <string name="days30change">30 days</string>
    <string name="days90change">90 days</string>
    <string name="days180change">180 days</string>
    <string name="trend">Trend</string>
    <string name="ge_graph_all">ALL</string>
    <string name="ge_graph_quarter">QUARTER</string>
    <string name="ge_graph_month">MONTH</string>
    <string name="ge_graph_week">WEEK</string>
    <string name="high_alch">High alch</string>
    <string name="low_alch">Low alch</string>
    <string name="last_geupdate">Last GE update</string>
    <string name="time_utc">%1$s UTC</string>
    <string name="exception_occurred">Unexpected %1$s occurred when %2$s</string>
    <string name="failed_to_obtain_data">Failed to obtain %1$s: %2$s</string>
    <string name="search_player">Search for a player…</string>
    <string name="track_period_last_day">Last day</string>
    <string name="track_period_last_week">Last week</string>
    <string name="track_period_last_month">Last month</string>
    <string name="track_period_last_year">Last year</string>
    <string name="lookup">Lookup</string>
    <string name="skill">Skill</string>
    <string name="exp">Exp</string>
    <string name="rank">Rank</string>
    <string name="lvl">Lvl</string>
    <string name="wait_before_refresh">Please wait %1$d seconds before refreshing again</string>
    <string name="empty_rsn_error">Enter a player name to lookup</string>
    <string name="empty_item_error">Enter an item to search for</string>
    <string name="ge_graph_loading">Graph is currently loading…</string>
    <string name="ok">Ok</string>
    <string name="tracker_no_gains_found">No exp gains found on Crystalmathlabs. If this is the first time checking your progress, it will start tracking the exp from now on</string>
    <string name="tracker_api_under_load">Crystalmathlabs servers are under heavy load, api temporarily disabled. Please try again later</string>
    <string name="tracker_load_from_cache">Crystalmathlabs servers are under heavy load, api temporarily disabled. Using cached data</string>
    <string name="tracker_load_from_network_error">Crystalmathlabs is currently unreachable. Using cached data from %1$s</string>
    <string name="hiscores_normal">Normal</string>
    <string name="hiscores_ironman">IM</string>
    <string name="hiscores_hardcore_ironman">HCIM</string>
    <string name="hiscores_ultimate_ironman">UIM</string>
    <string name="hiscores_dmm">DMM</string>
    <string name="network_error">network error</string>
    <string name="player_one">Player one</string>
    <string name="player_two">Player two</string>
    <string name="hiscores_compare_lvl">Compare lvl</string>
    <string name="hiscores_compare_rank">Compare rank</string>
    <string name="hiscores_compare_exp">Compare exp</string>
    <string name="hiscores_compare_both_not_ranked">Both users are not listed on the hiscores</string>
    <string name="go">Go</string>
    <string name="minigame">Minigame</string>
    <string name="score">Score</string>
    <string name="empty_second_rsn_error">Enter another player name to lookup</string>
    <string name="using_cached_data">Network error, using cached data from %1$s</string>
    <string name="using_cached_data_under_load">Servers under load, using cached data from %1$s</string>
    <string name="last_updated_at">Last updated at %1$s</string>
    <string name="player_not_found">Player not found on the hiscores</string>
    <string name="allowed_rsn_characters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 0123456789-_</string>
    <string name="math_calculator">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="percent">%</string>
    <string name="select_floating_views">Select floating views</string>
    <string name="select_floating_views_summary">Select which floating views to appear on your screen</string>
    <string name="inactive_floating_view_opacity">Inactive opacity</string>
    <string name="inactive_floating_view_opacity_info">The opacity when the floating view is inactive</string>
    <string name="floating_view_settings">Floating views</string>
    <string name="cancel">Cancel</string>
    <string name="search_clue">Search for any clue…</string>
    <string name="start_right_side">Start right side</string>
    <string name="start_right_side_info">When checked, start the floating view on the right side of the screen, otherwise left</string>
    <string name="version_string">Version %1$s</string>
    <string name="other_settings">Other</string>
    <string name="feedback">Submit feedback</string>
    <string name="feedback_info">For any suggestion, bugs or questions</string>
    <string name="show_in_store">Show in Play Store</string>
    <string name="show_in_store_info">Show the app on the Google Play Store</string>
    <string name="view_other_apps">Other apps</string>
    <string name="view_other_apps_info">View my other apps on the Play Store</string>
    <string name="libraries">Libraries</string>
    <string name="libraries_info">Show libraries used for this project</string>
    <string name="lib_view_pager_indicator">ViewPagerIndicator</string>
    <string name="lib_view_pager_indicator_author">JakeWharton</string>
    <string name="lib_glide">Glide</string>
    <string name="lib_glide_author">Bumptech</string>
    <string name="lib_volley">Volley</string>
    <string name="lib_volley_author">Google Inc.</string>
    <string name="lib_mpandroidchart">MPAndroidChart</string>
    <string name="lib_mpandroidchart_author">PhilJay</string>
    <string name="lib_exp4j">Exp4j</string>
    <string name="lib_exp4j_author">Frank Asseg</string>
    <string name="lib_fuzzywuzzy">JavaWuzzy</string>
    <string name="lib_fuzzywuzzy_author">xdrop</string>
    <string name="lib_roundedimageview">RoundedImageView</string>
    <string name="lib_roundedimageview_author">Vince Mi</string>
    <string name="lib_springy_heads">Springy heads</string>
    <string name="lib_springy_heads_author">Flipkart Incubator</string>
    <string name="lib_sqliteassethelper">SQLiteAssetHelper</string>
    <string name="lib_sqliteassethelper_author">Jeff Gilfelt</string>
    <string name="lib_advancedwebview">AdvancedWebView</string>
    <string name="lib_advancedwebview_author">delight.im</string>
    <string name="lib_materialprogressbar">MaterialProgressBar</string>
    <string name="lib_materialprogressbar_author">DreaminginCodeZH</string>
    <string name="lib_eventbus_author">Markus Junginger, greenrobot</string>
    <string name="lib_eventbus">EventBus</string>
    <string name="lib_observeable_webview_author">Soichiro Kashima</string>
    <string name="lib_observeable_webview">Android-ObservableScrollView</string>
    <string name="lib_subsampling_scale_image_view_author">David Morrissey</string>
    <string name="lib_subsampling_scale_image_view">Subsampling Scale Image View</string>
    <string name="material_showcase_view">MaterialShowcaseView</string>
    <string name="material_showcase_view_author">Dean Wild</string>
    <string name="draglistview_author">Magnus Woxblom</string>
    <string name="draglistview">DragListView</string>
    <string name="hiscores_sdmm">SDMM</string>
    <string name="check_for_updated_ge_items">Check for newly added items</string>
    <string name="check_for_updated_ge_items_info">Check for newly added items to the Grand Exchange and download if necessary</string>
    <string name="show_only_in_landscape">Show only in landscape</string>
    <string name="show_only_in_landscape_info">When checked, the floating views will only appear when you are in landscape orientation</string>
    <string name="show_only_in_fullscreen">Show only in fullscreen apps</string>
    <string name="show_only_in_fullscreen_info">When checked, the floating views will only appear when a fullscreen application is open, such as OSRS Mobile. <b>NOTE: does not always work!</b></string>
    <string name="apply_padding_left_side">Apply padding left side</string>
    <string name="align_floating_views_left_info">Apply the padding on the left side. Otherwise, the padding will be applied on the right side</string>
    <string name="padding_info">Apply a custom padding to the edge of the floating views selector. This may fix the problem of the bottom bar covering up the floating views selector on some devices</string>
    <string name="floating_views_padding">Set padding</string>
    <string name="dp">dp</string>
    <string name="quest_guide">Quest Guides</string>
    <string name="default_quest_source">Default quest source</string>
    <string name="default_quest_source_info">Select a default quest source to display the guide from</string>
    <string name="floating_view_size">Size of the floating view</string>
    <string name="floating_view_size_info">Set the size of the floating view, default is 50dp</string>
    <string-array name="ge_items_source">
        <item>ge_items_source_both</item>
        <item>ge_items_source_members</item>
        <item>ge_items_source_f2p</item>
    </string-array>
    <string name="ge_items_source_info">Select the type of items included in the search. Most convenient for f2p players that only search for f2p items</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description_optional">Description (optional)</string>
    <string name="repeated_timer">Repeated timer</string>
    <string name="timer_notify_after">Notify after</string>
    <string name="semicolon">:</string>
    <string name="hours_hint"><font size="14">(hours)</font></string>
    <string name="minutes_hint"><font size="14">(mins)</font></string>
    <string name="seconds_hint"><font size="14">(secs)</font></string>
    <string name="timer_edit_active">The timer is currently active, restart the timer for the changes to take effect</string>
    <string name="tt_view_maps">Maps</string>
    <string name="puzzles">Puzzles</string>
    <string name="quest_sort_members">By members</string>
    <string name="quest_sort_length">By length</string>
    <string name="quest_sort_difficulty">By difficulty</string>
    <string name="quest_sort_alphabetically">Alphabetically</string>
    <string name="quest_sort_qp">By quest points</string>
    <string name="quest_sort_completion">By completion</string>
    <string name="version_info">Tap to view changelog</string>
    <string name="advanced_settings">Advanced</string>
    <string name="start_service_externally">Start service externally</string>
    <string name="start_service_externally_info">Settings for advanced usage to start the floating views from Tasker/Macrodroid or other automation apps</string>
    <string name="hw_acceleration">Hardware acceleration</string>
    <string name="hw_acceleration_info">Enable or disable hardware acceleration in the floating views, may resolve render issues</string>
    <string name="show_close_button">Show close button</string>
    <string name="show_close_button_info">Show close button when dragging the floating views, to stop the service</string>
    <string name="floating_view_overlay_opacity">Overlay opacity</string>
    <string name="floating_view_overlay_opacity_info">Set the opacity of the whole overlay when it\'s open</string>
</resources>