<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/input_background"
    android:orientation="horizontal">

    <com.dennyy.oldschoolcompanion.customviews.LineIndicatorButton
        android:id="@+id/hiscores_normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:buttonText="@string/hiscores_normal"/>

    <com.dennyy.oldschoolcompanion.customviews.LineIndicatorButton
        android:id="@+id/hiscores_ironman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:buttonText="@string/hiscores_ironman"/>

    <com.dennyy.oldschoolcompanion.customviews.LineIndicatorButton
        android:id="@+id/hiscores_hardcore_ironman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:buttonText="@string/hiscores_hardcore_ironman"/>

    <com.dennyy.oldschoolcompanion.customviews.LineIndicatorButton
        android:id="@+id/hiscores_ultimate_ironman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:buttonText="@string/hiscores_ultimate_ironman"/>


    <com.dennyy.oldschoolcompanion.customviews.LineIndicatorButton
        android:id="@+id/hiscores_dmm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:buttonText="@string/hiscores_dmm"/>

    <com.dennyy.oldschoolcompanion.customviews.LineIndicatorButton
        android:id="@+id/hiscores_sdmm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:buttonText="@string/hiscores_sdmm"/>

</LinearLayout>