<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tt_main"
        android:icon="@drawable/clue_scroll_clear"
        android:orderInCategory="10"
        android:title="@string/search_clue"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_tt_maps"
        android:icon="@drawable/spade"
        android:orderInCategory="20"
        android:title="@string/tt_view_maps"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_tt_puzzles"
        android:icon="@drawable/puzzlebox"
        android:orderInCategory="30"
        android:title="@string/puzzles"
        app:showAsAction="always"/>
</menu>
