<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/text"
        android:textSize="@dimen/timer_font_size"/>

    <EditText
        android:id="@+id/timer_editor_title_edittext"
        android:layout_width="match_parent"
        android:textColor="@color/text"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:imeOptions="flagNoExtractUi"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_optional"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="@dimen/timer_font_size"/>

    <EditText
        android:id="@+id/timer_editor_desc_exittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_marginBottom="10dp"
        android:imeOptions="flagNoExtractUi"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timer_notify_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/timer_notify_after"
            android:textColor="@color/text"
            android:textSize="@dimen/timer_font_size"/>

        <EditText
            android:id="@+id/timer_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="flagNoExtractUi"
            android:textColor="@color/text"
            android:hint="@string/hours_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/timer_number_font_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semicolon"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/timer_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="flagNoExtractUi"
            android:gravity="center"
            android:hint="@string/minutes_hint"
            android:textColor="@color/text"
            android:inputType="number"
            android:maxLength="2"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/timer_number_font_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semicolon"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/timer_seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="flagNoExtractUi"
            android:textColor="@color/text"
            android:gravity="center"
            android:hint="@string/seconds_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/timer_number_font_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer_repeat_checkbox_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/timer_repeat_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeated_timer"
            android:textColor="@color/text"
            android:textSize="@dimen/timer_font_size"/>
    </LinearLayout>

    <TextView
        android:id="@+id/timer_edit_active"
        android:text="@string/timer_edit_active"
        android:layout_width="match_parent"
        android:textColor="@color/red"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timer_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/home_button_background"
            android:text="@string/cancel"
            android:textColor="@color/text"/>

        <Button
            android:id="@+id/timer_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/home_button_background"
            android:text="@string/save"
            android:textColor="@color/text"/>
    </LinearLayout>
</LinearLayout>